{
    "name": "MyPlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "fa74c794-d3a1-4978-8275-124a2dd03cb1",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "a1655c7d-45af-48c1-94f0-445ed5f95f4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "acf2b23c-aa15-4d5d-90ce-da7c1572e30d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fd66ab8e-9505-4765-b8f4-6b5086b0fc5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1405bb66-0207-46a0-8c16-993ee6f31571",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ded9e00-8201-4a7b-85ae-887c71ca4f92",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "179b3dd3-6a07-42aa-8872-0dd7637961c0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d02ea48e-72b7-4ebe-a458-75b8d3cb77d3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerTouchscreen",
            "id": "c2e0c9be-8262-42ef-8c6c-f3313dd103d3",
            "actions": [
                {
                    "name": "Swipe",
                    "type": "PassThrough",
                    "id": "cb4fe0d1-34b8-4373-98ca-6906c6965a40",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "21f3ecec-e7f9-489f-89ac-13a4f5035a1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f1dea676-5095-458c-9f24-519537de7cd0",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swipe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a2adce6-e826-47be-8c7e-eb69558a1491",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}